Fix footer deployment for GitHub Pages
- Restore modular footer system for development
- Add post-build script to inline footers for production
- Create scripts/inline-footer.js to replace placeholders with actual HTML
- Update package.json build process to include footer inlining
- Deploy to GitHub Pages with working version numbers and footers

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && npm run inline-footer",
+    "inline-footer": "node scripts/inline-footer.js",
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
