Update deploy script to include CNAME copy and add README.md for project documentation

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "inline-footer": "node scripts/inline-footer.js",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "cp CNAME dist/ && gh-pages -d dist"
   },
   "devDependencies": {
     "gh-pages": "^6.3.0",
